--- a/Deberes/Deber_CV/cv.html
+++ b/Deberes/Deber_CV/cv.html
@@ -2,21 +2,88 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currículum Vitae</title>
+    <style>
+        /* Selector por ID */
+        #Titulo-muy-especial {
+            margin: 20px;
+        }
+
+        /* Selector combinado por ID y etiquetas */
+        #Titulo-muy-especial, h1, h2, h3, h4, h5, h6 {
+            margin: 20px;
+            padding: 3px;
+            border: rgba(95, 95, 233, 0.886) 1px dashed;
+        }
+
+        /* Selectores por clase */
+        .lista-ordenada-mayusculas {
+            list-style-type: upper-alpha;
+        }
+
+        .lista-ordenada-romana {
+            list-style-type: upper-roman;
+        }
+
+        /* Enlaces */
+        li > a {
+            background-color: rgb(244, 113, 113);
+            text-decoration: none;
+        }
+
+        ul > li:hover {
+            background-color: rgb(128, 128, 230);
+        }
+
+        /* Estilo general */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 40px;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            text-align: center;
+            border-radius: 10px;
+        }
+
+        img {
+            border-radius: 50%;
+            border: 3px solid #fff;
+        }
+
+        section {
+            background-color: white;
+            margin: 20px auto;
+            padding: 20px;
+            border: 1px dashed blue;
+            border-radius: 10px;
+            max-width: 800px;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+    </style>
 </head>
 <body>
 
     <header>
-        <img src="Foto_Maicol Estuardo Nasimba Quinga.jpg" alt="Foto de Tu Nombre" width="150">
-        <h1>MAICOL Nasimba</h1>
+        <img src="Foto_Maicol Estuardo Nasimba Quinga.jpg" alt="Foto de Maicol Nasimba" width="150">
+        <h1 id="Titulo-muy-especial" style="color: white; background-color: black;">MAICOL Nasimba</h1>
         <p>Correo: nasimbamaicol@gmail.com | Teléfono: 0963041163</p>
         <p>Ubicación: Quito, Ecuador</p>
     </header>
 
     <section>
         <h2>Perfil Profesional</h2>
-        <p>Soy un estudiante universitario ecuatoriano con formacién en ingeniería de software, apasionado por la calidad y la mejora continua en el desarrollo de aplicaciones. Actualmente, me preparo para especializarme en pruebas de software, desarrollando habilidades clave en análisis de requisitos, diseño de casos de prueba y herramientas de automatización.
-            He participado en proyectos académicos que simulan escenarios reales, lo que me ha permitido adquirir experiencia práctica en garantizar la funcionalidad y el rendimiento de sistemas. Busco oportunidades para aplicar mis conocimientos, aprender de profesionales experimentados y contribuir al desarrollo de productos robustos y eficientes que satisfagan las expectativas de los usuarios y clientes.</p>
+        <p>Soy un estudiante universitario ecuatoriano con formación en ingeniería de software, apasionado por la calidad y la mejora continua en el desarrollo de aplicaciones. Actualmente, me preparo para especializarme en pruebas de software, desarrollando habilidades clave en análisis de requisitos, diseño de casos de prueba y herramientas de automatización.
+        He participado en proyectos académicos que simulan escenarios reales, lo que me ha permitido adquirir experiencia práctica en garantizar la funcionalidad y el rendimiento de sistemas. Busco oportunidades para aplicar mis conocimientos, aprender de profesionales experimentados y contribuir al desarrollo de productos robustos y eficientes que satisfagan las expectativas de los usuarios y clientes.</p>
     </section>
 
     <section>
@@ -24,10 +91,8 @@
         <h3>Sistema de cotización</h3>
         <h4>EPN - Quito, Ecuador </h4>
         <p><strong>Periodo:</strong> 2024</p>
-
         <p>Diseño e implementación de un sistema de cotización para facilitar la gestión de productos por parte de los laboratorios de la EPN.</p>
-        <p></p>Uso de herramientas y tecnologías como Python, JavaScript y bases de datos SQL para garantizar la funcionalidad y escalabilidad del sistema</p>
-    
+        <p>Uso de herramientas y tecnologías como Python, JavaScript y bases de datos SQL para garantizar la funcionalidad y escalabilidad del sistema.</p>
     </section>
 
     <section>
@@ -39,21 +104,27 @@
 
     <section>
         <h2>Habilidades</h2>
-        <ul>
-            <li>Metodologéas ágiles</li>
+        <ul class="lista-ordenada-mayusculas">
+            <li>Metodologías ágiles</li>
             <li>Automatización de pruebas</li>
-           
         </ul>
     </section>
 
     <section>
         <h2>Idiomas</h2>
-        <ul>
+        <ul class="lista-ordenada-romana">
             <li>Español - Nativo</li>
             <li>Inglés - B2</li>
         </ul>
     </section>
 
+    <section>
+        <h2>Links Internos</h2>
+        <ul>
+            <li><a href="#perfil">Ir al perfil</a></li>
+            <li><a href="#educacion">Ir a educación</a></li>
+        </ul>
+    </section>
 
 </body>
 </html>
