--- a/00-servidor-web/b-bootstrap.html
+++ b/00-servidor-web/b-bootstrap.html
@@ -7,7 +7,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 <!-- <link rel="stylesheet" href="assets/css/b-uno.css">
 <link rel="stylesheet" href="assets/css/b-dos.css">-->
-<link rel="stylesheet" href="assets/css/b-tres.css"> 
+<link rel="stylesheet" href="assets/css/b-minification.css"> 
 <!--Orden depende del ultimo declarado-->
 <!-- selectores css, styles -->
 </head>
